@@ -1,5 +1,12 @@
 h1. Changelog
 
+h2. Edge
+
+* new features:
+** none
+* bugfixes:
+** catch exeption on invalid format of received data
+
 h2. 0.0.9 / 2010-06-20
 
 *IMPORTANT! This version will not work with gem version lower than 0.0.9*
